# Churn-Prediction-Using-ANN

./: ANN prediction.ipynb  ANN.ipynb  Optimizers.ipynb  README.md  app.py  hyper_parameter_tuning.ipynb  pyproject.toml  regression.ipynb  requirements.txt
Data/: preprocessed_data.csv
Models/: model.h5
logs/fit/train/: events.out.tfevents.1774886931.BYTESTORM.22596.0.v2
logs/fit/validation/: events.out.tfevents.1774886933.BYTESTORM.22596.1.v2
